--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 python-telegram-bot==20.3
-python-dotenv==1.0.0
+flask==2.2.3
 requests==2.28.1
+apscheduler==3.9.1
+python-dotenv==1.0.0
+gunicorn==20.1.0  # For production deployment
